// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feedback Basic renders as expected 1`] = `
<div
  className="bg-gray-faint py12 px18 round color-gray"
>
  <div>
    <div>
      <div
        className="mb6"
      >
        Was this 
        page
         helpful?
      </div>
      <button
        className="btn btn--s"
        id="dr-ui--feedback-lnglat-yes"
        onClick={[Function]}
      >
        Yes
      </button>
      <button
        className="btn btn--s ml6"
        id="dr-ui--feedback-lnglat-no"
        onClick={[Function]}
      >
        No
      </button>
    </div>
  </div>
</div>
`;

exports[`feedback Change type renders as expected 1`] = `
<div
  className="bg-gray-faint py12 px18 round color-gray"
>
  <div>
    <div>
      <div
        className="mb6"
      >
        Was this 
        section
         helpful?
      </div>
      <button
        className="btn btn--s"
        id="dr-ui--feedback-page-yes"
        onClick={[Function]}
      >
        Yes
      </button>
      <button
        className="btn btn--s ml6"
        id="dr-ui--feedback-page-no"
        onClick={[Function]}
      >
        No
      </button>
    </div>
  </div>
</div>
`;

exports[`feedback Feedback placement renders as expected 1`] = `
<div>
  <div
    className="sticky-outer-wrapper"
    style={Object {}}
  >
    <div
      className="sticky-inner-wrapper"
      style={
        Object {
          "position": "relative",
          "top": "0px",
          "zIndex": 4,
        }
      }
    >
      <div
        className="border-t border-b border--gray-light bg-white"
        data-swiftype-index="false"
      >
        <div
          className="limiter"
        >
          <div
            className="grid grid--gut36 mr-neg36 mr0-mm"
          >
            <div
              className="col col--4-mm col--12"
            >
              <div
                className="ml24-mm  flex-parent flex-parent--center-cross"
                style={
                  Object {
                    "height": 52,
                  }
                }
              >
                <a
                  className="wmax240-ml wmax180-mm txt-fancy txt-l block txt-truncate color-blue-on-hover"
                  href="/api/"
                >
                  API Documentation
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="limiter"
  >
    <div
      className="grid"
    >
      <div
        className="col col--4-mm  col--12 bg-gray-faint"
        data-swiftype-index="false"
      >
        <div
          className="sticky-outer-wrapper"
          style={Object {}}
        >
          <div
            className="sticky-inner-wrapper"
            style={
              Object {
                "position": "relative",
                "top": "0px",
                "zIndex": 3,
              }
            }
          >
            <div
              className="pt24-mm pt0 viewport-almost-mm scroll-auto-mm scroll-styled block"
              id="dr-ui--page-layout-sidebar"
            >
              <div
                className="txt-l color-blue txt-fancy mb12 block-mm none"
              >
                <div
                  className="ml36"
                >
                  Section title
                </div>
              </div>
              <div>
                <div
                  className="block-mm none"
                >
                  <div
                    className="pl24-mm px0 block-mm none pr12 bg-lighten75"
                  >
                    <div
                      className="py3 "
                    >
                      <a
                        className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                        href="page-one"
                      >
                        <div
                          className="pl12 py12 txt-bold txt-m flex-child color-black"
                        >
                          Title one
                          
                        </div>
                      </a>
                      <div
                        className="ml24 pt0"
                      >
                        <ul
                          className="txt-m pb12 inline-block-mm none unprose"
                        >
                          <li
                            className="mb6"
                          >
                            <a
                              className="color-blue-on-hover"
                              href="#heading-one"
                              id="#heading-one-sidebar"
                            >
                              Heading one
                              
                            </a>
                            <ul
                              className="none"
                            />
                          </li>
                          <li
                            className="mb6"
                          >
                            <a
                              className="color-blue-on-hover"
                              href="#heading-two"
                              id="#heading-two-sidebar"
                            >
                              Heading two
                              
                            </a>
                            <ul
                              className="none"
                            />
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                  <div
                    className="pl24-mm px0 block-mm none pr12"
                  >
                    <div
                      className="py3  border-t border--gray-light"
                    >
                      <a
                        className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                        href="page-two"
                      >
                        <div
                          className="pl12 py12 txt-bold txt-m flex-child"
                        >
                          Title two
                          
                        </div>
                        <div
                          className="flex-child flex-child--no-shrink"
                        >
                          <svg
                            className="events-none icon"
                            focusable="false"
                            role="presentation"
                            style={
                              Object {
                                "height": 18,
                                "width": 18,
                              }
                            }
                          >
                            <use
                              xlinkHref="#icon-chevron-down"
                              xmlnsXlink="http://www.w3.org/1999/xlink"
                            />
                          </svg>
                        </div>
                      </a>
                      
                    </div>
                  </div>
                </div>
                <div
                  className="none-mm block bg-gray-faint px24 py24"
                >
                  <div
                    className="relative "
                  >
                    <div
                      className="select-container "
                    >
                      <select
                        aria-required={true}
                        className="select select--stroke round-full bg-white"
                        data-test="navigate-this-section-select"
                        disabled={false}
                        id="navigate-this-section"
                        onChange={[Function]}
                        value="page-one"
                      >
                        <option
                          value="page-one"
                        >
                          Title one
                        </option>
                        <option
                          value="page-two"
                        >
                          Title two
                        </option>
                      </select>
                      <div
                        className="select-arrow"
                      />
                    </div>
                    <div
                      role="alert"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col col--8-mm  col--12 mt24-mm mb60 pr0-mm px36-mm"
        id="docs-content"
      >
        <div
          className="prose"
        >
          <h1>
            Title
          </h1>
          <p>
            Vestibulum id ligula porta felis euismod semper. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula porta felis euismod semper.
          </p>
          <p>
            Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
          </p>
          <div
            className="bg-gray-faint py12 px18 round color-gray"
          >
            <div>
              <div>
                <div
                  className="mb6"
                >
                  Was this 
                  page
                   helpful?
                </div>
                <button
                  className="btn btn--s"
                  id="dr-ui--feedback-page-yes"
                  onClick={[Function]}
                >
                  Yes
                </button>
                <button
                  className="btn btn--s ml6"
                  id="dr-ui--feedback-page-no"
                  onClick={[Function]}
                >
                  No
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
